# terminal-game

./: .gitignore  CMakeLists.txt
test/: CMakeLists.txt  game.h  main.cpp  test.cpp  test.h
test/libs/: random.h
